LAB_6/argocd/argocd-server-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort
  ports:
    - name: http
      nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      nodePort: 30443
      port: 443
      protocol: TCP
      targetPort: 8080
